--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,19 @@
+// {
+//   "presets": [
+//     "@vue/app"
+//   ]
+// }
 {
   "presets": [
     "@vue/app"
+  ],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "vxe-table",
+        "style": true // 样式是否也按需加载
+      }
+    ]
   ]
 }
