--- a/package.json
+++ b/package.json
@@ -39,16 +39,18 @@
     "vuedraggable": "^2.16.0",
     "vuescroll": "^4.14.4",
     "vuex": "^3.0.1",
+    "vxe-table": "^3.3.6",
+    "xe-utils": "^3.2.1",
     "xlsx": "^0.13.3"
   },
   "devDependencies": {
-    "sass": "^1.26.2",
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-plugin-unit-mocha": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-standard": "^3.0.0-beta.10",
     "@vue/test-utils": "^1.0.0-beta.10",
+    "babel-plugin-import": "^1.13.3",
     "chai": "^4.1.2",
     "compression-webpack-plugin": "^6.0.2",
     "eslint-plugin-cypress": "^2.0.1",
@@ -58,6 +60,7 @@
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.13.1",
     "postcss-px-to-viewport": "^1.1.1",
+    "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.5.13",
     "webpack-bundle-analyzer": "^4.2.0"
